--- a/kernel/kernel-syncdata-service/src/test/resources/application.properties
+++ b/kernel/kernel-syncdata-service/src/test/resources/application.properties
@@ -6,7 +6,7 @@ mosip.kernel.syncdata.auth-manager-base-uri=http://localhost:8091/authmanager
 mosip.kernel.syncdata.auth-manager-roles=/roles
 mosip.kernel.syncdata.auth-user-details=/userdetails
 mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.io/v1/keymanager/publickey/{applicationId}
-#mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/keymanager/sign
+mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/keymanager/sign
 mosip.kernel.syncdata.syncjob-base-url=http://localhost:8099/v1/admin/syncjobdef
 
 
