MOS-29671 : pom changes
Former-commit-id: 1ad33cc8e6e7037a2d60153e8e4b4549c158a336
Former-commit-id: 83846616566081fc236790fcba986a06a0b0ca3b

--- a/pre-registration/pre-registration-document-service/pom.xml
+++ b/pre-registration/pre-registration-document-service/pom.xml
@@ -80,13 +80,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-			<version>${spring.boot.version}</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
-			<version>${spring.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.preregistration</groupId>
+			<artifactId>pre-registration-document-service-impl</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -106,7 +109,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
 
