--- a/authentication/authentication-otp-service/Dockerfile
+++ b/authentication/authentication-otp-service/Dockerfile
@@ -22,6 +22,9 @@ ENV spring_config_label_env=${spring_config_label}
 # environment variable to pass spring configuration url, at docker runtime
 ENV spring_config_url_env=${spring_config_url}
 
+RUN echo "Active Profile Env-> $active_profile_env"
+RUN echo "Active Profile Env-> $active_profile"
+
 
 ADD target/authentication-otp-service-*.jar authentication-otp-service.jar
 
