--- a/pre-registration/pre-registration-booking-service/pom.xml
+++ b/pre-registration/pre-registration-booking-service/pom.xml
@@ -27,6 +27,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -64,11 +65,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.preregistration</groupId>
+			<artifactId>pre-registration-booking-service-impl</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
