Adding instructions for unzipping
Former-commit-id: 9b0b7b2698a0655a1f1e711790ff38d171145e08
Former-commit-id: 03d24efb1e034636218195ca8faf985bf96baccc

--- a/authentication/authentication-otp-service/Dockerfile
+++ b/authentication/authentication-otp-service/Dockerfile
@@ -27,7 +27,13 @@ ADD target/authentication-otp-service-*.jar authentication-otp-service.jar
 
 ADD http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/kernel/kernel-otpmanager-service/glowroot.zip glowroot.zip
 RUN ls
-RUN echo $(ls)
+
+RUN apt-get update && apt-get install -y unzip
+RUN unzip glowroot.zip
+RUN rm -rf glowroot.zip
+
+RUN ls
+RUN ls glowroot/
 
 EXPOSE 8092
 
