--- a/kernel/kernel-crypto-jce/pom.xml
+++ b/kernel/kernel-crypto-jce/pom.xml
@@ -16,5 +16,10 @@
 			<artifactId>kernel-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+                     <groupId>org.bitbucket.b_c</groupId>
+                     <artifactId>jose4j</artifactId>
+                     <version>0.6.5</version>
+              </dependency> 	
 	</dependencies>
 </project>
