MOS-28644 - updated crypto utility
Former-commit-id: 4d161f7907c0d727a5bde8d166673b6998821550
Former-commit-id: 8b6354be24663c781c8513508389e2135ee65ca9

--- a/authentication/authentication-demo-app/pom.xml
+++ b/authentication/authentication-demo-app/pom.xml
@@ -46,12 +46,17 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-keygenerator-bouncycastle</artifactId>
-			<version>0.12.16</version>
+			<version>0.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-crypto-jce</artifactId>
-			<version>0.12.16</version>
+			<version>0.10.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-core</artifactId>
+			<version>0.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
