MOS-29579 : made changes for face/iris/fingerprint authentication
Former-commit-id: a2ff0ebbc1c10e8fd30a1bf333863a7511d5a27d
Former-commit-id: 870cba8ecc73d0c6c260a6d979e17a58e04e9c70

--- a/registration/registration-services/src/main/resources/spring.properties
+++ b/registration/registration-services/src/main/resources/spring.properties
@@ -38,6 +38,11 @@ spring.application.name=
 spring.profiles.active= 
 spring.cloud.config.label=
 
+#AUTH_SDK
+mosip.registration.face.provider=com.identy.IdentyBioSDK
+mosip.registration.iris.provider=com.identy.IdentyBioSDK
+mosip.registration.finger.provider=com.identy.IdentyBioSDK
+
 
 #MDM
 #host has to be clarified whether nedd to be in config or hardcoded
