--- a/registration/pom.xml
+++ b/registration/pom.xml
@@ -392,7 +392,13 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>${maven.jacoco.version}</version>
-				<executions>
+<!-- 				<configuration>
+					<excludes>
+						<exclude>**/identy_face_sdk.jar</exclude>
+						<exclude>identy_face_sdk.jar</exclude>
+					</excludes>
+				</configuration>
+ -->				<executions>
 					<execution>
 						<goals>
 							<goal>prepare-agent</goal>
