--- a/registration-processor/pre-processor/registration-processor-request-handler-service/Dockerfile
+++ b/registration-processor/pre-processor/registration-processor-request-handler-service/Dockerfile
@@ -26,4 +26,18 @@ VOLUME /home/logs  /home/ftp1/packet_generated/decrypted  /home/ftp1/packet_gene
 
 COPY ./target/registration-processor-request-handler-service-*.jar registration-processor-request-handler-service.jar
 EXPOSE 8082
-CMD ["java","-Dspring.cloud.config.label=${spring_config_label_env}","-Dspring.profiles.active=${active_profile_env}","-Dspring.cloud.config.uri=${spring_config_url_env}","-jar","registration-processor-request-handler-service.jar"]
+
+CMD if [ "$active_profile_env" = "preprod" ]; then \
+    wget 'http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/testing/glowroot.zip' ; \
+    apt-get update && apt-get install -y unzip ; \
+    unzip glowroot.zip ; \
+    rm -rf glowroot.zip ; \
+    
+    sed -i 's/<service_name>/registration-processor-request-handler-service/g' glowroot/glowroot.properties ; \
+    java -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -jar -javaagent:glowroot/glowroot.jar registration-processor-request-handler-service.jar ; \
+    else \
+    java -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -jar registration-processor-request-handler-service.jar ; \
+    fi
+
+
+#CMD ["java","-Dspring.cloud.config.label=${spring_config_label_env}","-Dspring.profiles.active=${active_profile_env}","-Dspring.cloud.config.uri=${spring_config_url_env}","-jar","registration-processor-request-handler-service.jar"]
