MOS-29691 vid generator service added
Former-commit-id: e887d4593af09b871ef5b1c26002deab2323e9f4
Former-commit-id: d39f8091b899b746d8b06124027d908ecda6ade5

--- a/kernel/kernel-vidgenerator-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-vidgenerator-service/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
 javax.persistence.jdbc.driver=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 hibernate.jdbc.lob.non_contextual_creation=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=none
 hibernate.show_sql=false
 hibernate.format_sql=false
 hibernate.connection.charSet=utf8
@@ -90,6 +90,8 @@ mosip.kernel.vid.min-unused-threshold=100000
 mosip.kernel.vid.vids-to-generate=200000
 #time to renew after expiry(in days)
 mosip.kernel.vid.time-to-renew-after-expiry=5
+#for genaration on init vids timeout 
+mosip.kernel.vid.pool-population-timeout=10000000
 
 
 
@@ -97,9 +99,9 @@ kernel.vid.revoke-scheduler-type=cron
 #schedular seconds configuration
 kernel.vid.revoke-scheduler-seconds=0
 #schedular minutes configuration
-kernel.vid.revoke-scheduler-minutes=*
+kernel.vid.revoke-scheduler-minutes=0
 #schedular hours configuration
-kernel.vid.revoke-scheduler-hours=*
+kernel.vid.revoke-scheduler-hours=23
 #schedular days configuration
 kernel.vid.revoke-scheduler-days_of_month=*
 #schedular months configuration
