--- a/pre-registration/pre-registration-demographic-service-impl/src/main/resources/application.properties
+++ b/pre-registration/pre-registration-demographic-service-impl/src/main/resources/application.properties
@@ -154,3 +154,26 @@ mosip.kernel.idobjectvalidator.masterdata.documentcategories.lang.rest.uri=https
 mosip.kernel.idobjectvalidator.schema-name=mosip-identity-json-schema-dev-int.json
 preregistartion.config.identityjson=PreRegistrationIdentitiyMapping.json
  
+mosip.primary-language=eng
+mosip.secondary-language=ara
+#-------------------------------FS Adapter- HDFS -------------------------------
+# Name node url for HDFS - Non Secured
+#mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://13.71.115.204:51000
+# Name node url for HDFS - Secured (auth enabled)
+mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://104.211.200.76:51000
+# Enable if hadoop security authorization is 'true', default is false
+mosip.kernel.fsadapter.hdfs.authentication-enabled=true
+# HDFS log level. Change this to debug to see hdfs logs
+logging.level.org.apache.hadoop=warn
+# If HDFS is security is configured with Kerberos, Key Distribution Center domain
+mosip.kernel.fsadapter.hdfs.kdc-domain=HDFSKERBEROS1.SOUTHINDIA.CLOUDAPP.AZURE.COM
+# Username to access hdfs. Change this to application username (regprocessor,prereg or idrepo)
+#mosip.kernel.fsadapter.hdfs.user-name=mosipuser
+#keytab file path, must be set if authentication-enable is true
+#read keytab file both classpath and physical path ,append appropriate prefix
+#for classpath prefix classpath:mosip.keytab
+#for physical path prefix file:/home/keys/mosip.keytab
+mosip.kernel.fsadapter.hdfs.keytab-file=classpath:mosip.keytab
+
+mosip.kernel.fsadapter.hdfs.user-name=prereg
+mosip.kernel.fsadapter.hdfs.user-pass=Mosip@dev123
