--- a/pre-registration/pre-registration-booking-service/Dockerfile
+++ b/pre-registration/pre-registration-booking-service/Dockerfile
@@ -32,7 +32,7 @@ CMD if [ "$active_profile_env" = "preprod" ]; then \
     rm -rf glowroot.zip ; \
     
     sed -i 's/<service_name>/pre-registration-booking-service/g' glowroot/glowroot.properties ; \
-    java -jar -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" pre-registration-booking-service.jar ; \
+    java -Dloader.path=/kernel-ref-idobjectvalidator-0.9.1.jar -jar -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" pre-registration-booking-service.jar ; \
     else \
     java -jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" pre-registration-booking-service.jar ; \
     fi
