MOS-29978 Updated demo app for multi-modality, layout, and default port.
Former-commit-id: 7c20f241157cbfefffe7da129f9db0c8dd0a90ee
Former-commit-id: 97a475160a80a604a10c6e48524ebdf9379ce170

--- a/authentication/authentication-demo-app/src/main/resources/application.properties
+++ b/authentication/authentication-demo-app/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8765
 #----------------------- Crypto --------------------------------------------------
 #Crypto asymmetric algorithm name
 mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
