MOS-000 uin check
Former-commit-id: 24c1f3333d21bf7c5bd3768dbc6c90b011e3d7ac
Former-commit-id: 868cb4276e83b668ab56765c22744c3c6d0a4e69

--- a/kernel/kernel-uingenerator-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-uingenerator-service/src/main/resources/application-local.properties
@@ -77,6 +77,6 @@ uin_database_password=Mosip@dev123
 spring.profiles.active=local
 server.servlet.path=/v1/uingenerator
 
-mosip.kernel.uin.get_executor_pool=1000
-hikari.maximumPoolSize=1000
+mosip.kernel.uin.get_executor_pool=400
+mosip.kernel.uin.hikari_maximumPoolSize=400
 
