--- a/kernel/kernel-uingenerator-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-uingenerator-service/src/main/resources/application-local.properties
@@ -68,7 +68,15 @@ mosip.kernel.signature.signature-version-id=v1.0
 mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/keymanager/sign
 mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.io/v1/keymanager/publickey/{applicationId}
 auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
-
-uin_database_url=jdbc:postgresql://localpostgre:9001/mosip_kernel
+auth.jwt.secret=authjwtsecret
+auth.jwt.base=Mosip-Token
+uin_database_url=jdbc:postgresql://104.211.208.136:9001/mosip_kernel
 uin_database_username=kerneluser
-uin_database_password=pwd
+uin_database_password=Mosip@dev123
+
+spring.profiles.active=local
+server.servlet.path=/v1/uingenerator
+
+mosip.kernel.uin.get_executor_pool=400
+mosip.kernel.uin.hikari_maximumPoolSize=400
+
