Updated Spring properties
Former-commit-id: d54b070f5269a94e203113e2dc999875361cc5b4
Former-commit-id: 88a6c49b18c72622e424d9a3a7d73aa96ae30eb7

--- a/registration/registration-services/src/main/resources/spring.properties
+++ b/registration/registration-services/src/main/resources/spring.properties
@@ -279,7 +279,7 @@ center_remap_sync.service.requestsignrequired=true
 #ida_key details
 ida_key.service.url=https://${mosip.hostname}/v1/keymanager/publickey/IDA
 ida_key.service.httpmethod=GET
-ida_key.service.responseType=io.mosip.registration.dto.PublicKeyResponse
+ida_key.service.responseType=java.util.LinkedHashMap
 ida_key.service.headers=Content-Type:APPLICATION/JSON
 ida_key.service.authrequired=true
 ida_key.service.signrequired=false
