MOS-30054 : request validation changes
Former-commit-id: a8c9b0d2462d0900e9bc512a6a0e8300f9c4dbc2
Former-commit-id: a1be650f3b046a9bcc432dd945594f76ae5a52b1

--- a/pre-registration/pre-registration-demographic-service/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-demographic-service/src/main/resources/bootstrap.properties
@@ -14,3 +14,7 @@ server.port=9092
 # 5 minutes (should not be done in production)
 health.config.enabled=false
 
+mosip.preregistration.demographic.id.create=mosip.pre-registration.demographic.create
+mosip.preregistration.demographic.id.update=mosip.pre-registration.demographic.update
+mosip.preregistration.demographic.id.retrieve.date=mosip.pre-registration.demographic.retrieve.date
+
