--- a/pre-registration/pre-registration-generateqrcode-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-generateqrcode-service/src/test/resources/application.properties
@@ -51,3 +51,5 @@ cancel.appoinment.template=cancel-appointment
 mosip.kernel.idobjectvalidator.masterdata.documentcategories.lang.rest.uri=https://dev.mosip.io/v1/masterdata/documentcategories/{langcode}
 mosip.kernel.idobjectvalidator.masterdata.documenttypes.rest.uri=https://dev.mosip.io/v1/masterdata/documenttypes/{documentcategorycode}/{langcode}
 mosip.kernel.masterdata.validdoc.rest.uri==https://dev.mosip.io/masterdata/validdocuments/
+
+mosip.pre-registration.qrcode.id.generate=mosip.pre-registration.qrcode.generate
