MOS-30054 : request validation changes1
Former-commit-id: c06d0a9a7fca598be3127b1a838a9857d6b82c0e
Former-commit-id: c78eee073f4faf19dc6bde9ff55413c4f95c4263

--- a/pre-registration/pre-registration-notification-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-notification-service/src/test/resources/application.properties
@@ -76,3 +76,4 @@ mosip.kernel.idobjectvalidator.masterdata.documenttypes.rest.uri=https://dev.mos
 mosip.kernel.masterdata.validdoc.rest.uri==https://dev.mosip.io/masterdata/validdocuments/
 
 mosip.pre-registration.notification.id.notify=mosip.pre-registration.notification.notify
+mosip.notificationtype=sms|email
