MOS-29336 : run fix
Former-commit-id: 616e392d6474344e1a0e03940ed0e3ef16e96dd3
Former-commit-id: 3ba4d4b9ee1df8c7575bf7f9b26800b3077b28ec

--- a/pre-registration/pre-registration-batchjob/src/main/resources/bootstrap.properties
+++ b/pre-registration/pre-registration-batchjob/src/main/resources/bootstrap.properties
@@ -10,3 +10,4 @@ management.endpoints.web.exposure.include=refresh
 health.config.enabled=false
 
 server.port=9097
+mosip.preregistration.batchjob.id.sync=mosip.preregistration.booking.availability.sync.id
