--- a/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -17,8 +17,8 @@ hibernate.generate_statistics=false
 #property name is case sensitive and required for interceptors configuration
 #hibernate.ejb.interceptor=io.mosip.kernel.masterdata.config.MasterDataInterceptor
 
-auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken 
-
+#auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken 
+mosip.kernel.masterdata.audit-url=https://qa.mosip.io/v1/auditmanager/audits
 mosip.kernel.packet-status-update-url=https://dev.mosip.io/registrationprocessor/v1/registrationstatus/search
 
 mosip.kernel.registrationcenterid.length=5
@@ -31,9 +31,9 @@ masterdata_database_password=Mosip@dev123
 mosip.primary-language=eng
 mosip.secondary-language=ara
 mosip.all-languages=all
-auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
+#auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
 mosip.supported-languages=eng,ara,fra
 
-auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
+auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/admin/validateToken
 
 
