MOS-000 hadcoding removed
Former-commit-id: fd4ae3c945ede358d4eabe77811a900f13c51a69
Former-commit-id: 0d5a941d1d31dda92b10c44304631341c9069beb

--- a/kernel/kernel-auth-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-auth-service/src/main/resources/application-local.properties
@@ -29,6 +29,10 @@ mosip.kernel.auth.app.id=authserver
 mosip.kernel.auth.client.id=auth
 mosip.kernel.auth.secret.key=050c7e61-e415-4390-a1ac-03e1624e2b1d
 
+mosip.keycloak.admin.client.id=admin-cli
+mosip.keycloak.admin.user.id=admin
+mosip.keycloak.admin.secret.key=KEYCLOAKPASS
+
 mosip.kernel.ida.app.id=ida
 mosip.kernel.ida.client.id=ida
 mosip.kernel.ida.secret.key=bad25866-e6a5-4f93-831a-08923ea6eee0
@@ -125,6 +129,8 @@ mosip.admin.redirecturi=${mosip.authmanager.base-url}/login-redirect/
 mosip.admin_realm_id=mosip
 
 mosip.master.realm-id=master
+mosip.admin.individual_role_id=24a3b0b9-cbde-4591-ab40-05e700fdbc03
+mosip.admin.pre-reg_user_password=mosip
 #mosip.kernel.mosip-client-id=8eb0b3c5-886f-4074-9478-abefcec85583
 
 
