MOS-30154 added test cases for packet status update
Former-commit-id: 3e116e4128e4aad3d21c9d1055f870cefd485b9d
Former-commit-id: f0cd6ba69f68b41d4912f66555e0e647744839de

--- a/admin/admin-service/src/test/resources/bootstrap.properties
+++ b/admin/admin-service/src/test/resources/bootstrap.properties
@@ -11,7 +11,7 @@ management.endpoints.web.exposure.include=refresh
 #management.security.enabled=false
 
 server.port=8098
-server.servlet.path=/v1/admin
+server.servlet.path=/r2/v1/admin
 
 #disabling health check so that client doesnt try to load properties from sprint config server every
 # 5 minutes (should not be done in production)
