adding pridgenerator service
Former-commit-id: 13dadedead65674235d575b1e3c6fcb2d71af986
Former-commit-id: eab1e1643c3225eb4b7d79562b8d11755203c8ca

--- a/kernel/kernel-vidgenerator-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-vidgenerator-service/src/main/resources/application-local.properties
@@ -107,5 +107,6 @@ kernel.vid.revoke-scheduler-months=*
 kernel.vid.revoke-scheduler-days_of_week=*
 
 
-
+server.port=8080
+server.servlet.path=/v1/pridgenerator
 
