updation constsnts and pom.xml
Former-commit-id: 6b1c1c8d908253a402516c75166e4a9d2259c424
Former-commit-id: f704559614ae06e2b5d08efcb28738d65aea5a14

--- a/kernel/kernel-pridgenerator-service/src/main/resources/application-local.properties
+++ b/kernel/kernel-pridgenerator-service/src/main/resources/application-local.properties
@@ -69,9 +69,9 @@ mosip.kernel.signature.signature-version-id=v1.0
 #-------------------------------------------------------------
 
 #minimum threshold of unused prid
-mosip.kernel.prid.min-unused-threshold=50000
+mosip.kernel.prid.min-unused-threshold=500
 #number of prids to generate
-mosip.kernel.prid.prids-to-generate=100000
+mosip.kernel.prid.prids-to-generate=1000
 #time to renew after expiry(in days)
 mosip.kernel.prid.time-to-renew-after-expiry=5
 #for genaration on init prids timeout 
