--- a/kernel/kernel-pridgenerator-service/src/main/resources/bootstrap.properties
+++ b/kernel/kernel-pridgenerator-service/src/main/resources/bootstrap.properties
@@ -2,9 +2,9 @@
 #spring.cloud.config.label=master
 spring.cloud.config.name=application
 spring.application.name=kernel-pridgenerator-service
-#spring.profiles.active=test
+spring.profiles.active=local
 management.endpoints.web.exposure.include=refresh
 #management.security.enabled=false
 
-server.port=8080
+server.port=8091
 server.servlet.path=/v1/pridgenerator
