--- a/kernel/kernel-pridgenerator-service/src/main/resources/bootstrap.properties
+++ b/kernel/kernel-pridgenerator-service/src/main/resources/bootstrap.properties
@@ -2,7 +2,7 @@
 #spring.cloud.config.label=master
 spring.cloud.config.name=application
 spring.application.name=kernel-pridgenerator-service
-spring.profiles.active=local
+#spring.profiles.active=local
 management.endpoints.web.exposure.include=refresh
 #management.security.enabled=false
 
