MOS-29674:prid changes
Former-commit-id: b9cb046205b33bf7c4551fcf3c927a2a1d682858
Former-commit-id: 17b059bf9f80b6bfad6349015438596283a9aaa2

--- a/pre-registration/pre-registration-booking-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-booking-service/src/test/resources/application.properties
@@ -16,7 +16,7 @@ hibernate.generate_statistics=false
 notification.url=https://dev-int.mosip.io/notification/notify
 mosip.supported-languages=eng,ara,fra
 mosip.primary-language=eng
-
+mosip.io.prid.url=https://dev.mosip.io/v1/pridgenerator/prid
 preregistration.country.specific.zoneId=GMT+05:30
 
 preregistration.rebook.timespan = 24
