--- a/pre-registration/pre-registration-demographic-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-demographic-service/src/test/resources/application.properties
@@ -19,7 +19,7 @@ server.servlet.context-path=/preregistration/v1
 server.port=9092
 mosip.kernel.prid.length=14
 groupId.length=12
-
+mosip.io.prid.url=https://dev.mosip.io/v1/pridgenerator/prid
 mosip.supported-languages=eng,ara,fra
 
 dev.dns.url=http://dev.mosip.io
