--- a/pre-registration/pre-registration-demographic-service-impl/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-demographic-service-impl/src/test/resources/application.properties
@@ -19,7 +19,7 @@ server.servlet.context-path=/preregistration/v1
 server.port=9092
 mosip.kernel.prid.length=14
 groupId.length=12
-
+mosip.io.prid.url=https://dev.mosip.io/v1/pridgenerator/prid
 mosip.supported-languages=eng,ara,fra
 
 dev.dns.url=http://dev.mosip.io
@@ -287,6 +287,7 @@ mosip.kernel.virus-scanner.host=104.211.200.46
 mosip.kernel.virus-scanner.port=3310
 
 notification.url=https://dev-int.mosip.io/notification/notify
+mosip.io.prid.url=https://dev.mosip.io/v1/pridgenerator/prid
 mosip.supported-languages=eng,ara,fra
 mosip.primary-language=eng
 
