--- a/pre-registration/pre-registration-document-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-document-service/src/test/resources/application.properties
@@ -21,7 +21,7 @@ spring.servlet.multipart.max-request-size=-1
 max.file.size=5
 groupId.length=12
 server.port=9093
-
+mosip.io.prid.url=https://dev.mosip.io/v1/pridgenerator/prid
 mosip.kernel.virus-scanner.host=104.211.200.46
 mosip.kernel.virus-scanner.port=3310
 
